Removed .header height. Height has to vary according to content, to prevent overlaps, etc.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/1.10@12786 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/thenews.css
+++ b/styles/thenews.css
@@ -239,7 +239,6 @@ ul.jumplinks a:focus, ul.jumplinks a:active {
 
 /* #Header */
 #header {
-	height: 92px;
 	text-align: left;
 }
 
